# IndieStudio

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  autor
assets/models3D/: Among_Us_.mtl  Among_Us_black.mtl  Among_Us_blue.mtl  Among_Us_white.mtl  laser beam.mtl
cmake/: Findraylib.cmake  raylib-config.cmake
models3D/: AmongUsblack.mtl  AmongUsblue.mtl  AmongUsred.mtl  AmongUswhite.mtl  Among_Us_Low_Poly.mtl  Among_Us_dead_.iqm  Walk_anim_amongUs.iqm
raylib/include/: Model.hpp  Texture.hpp  Vector2.hpp  Window.hpp  raylib.hpp
raylib/src/: Model.cpp  Window.cpp
src/: CMakeLists.txt  main.cpp
src/ECS/: CMakeLists.txt  World.cpp  World.hpp  ecs.cpp  ecs.hpp  initEntities.cpp
src/ECS/Components/: AllComponents.hpp  CMakeLists.txt  ComponentBombs.cpp  ComponentBombs.hpp  ComponentButton.cpp  ComponentButton.hpp  ComponentClickable.cpp  ComponentClickable.hpp  ComponentCollider.cpp  ComponentCollider.hpp  ComponentControllable.cpp  ComponentControllable.hpp  ComponentCube.cpp  ComponentCube.hpp  ComponentDrawable.cpp  ComponentDrawable.hpp  ComponentDroppable.cpp  ComponentDroppable.hpp  ComponentEmote.cpp  ComponentEmote.hpp  ComponentExplodable.cpp  ComponentExplodable.hpp  ComponentExplosion.cpp  ComponentExplosion.hpp  ComponentFireBlast.cpp  ComponentFireBlast.hpp  ComponentHealth.cpp  ComponentHealth.hpp  ComponentKillable.cpp  ComponentKillable.hpp  ComponentKills.cpp  ComponentKills.hpp  ComponentMesh.cpp  ComponentMesh.hpp  ComponentModel.cpp  ComponentModel.hpp  ComponentMovable.cpp  ComponentMovable.hpp  ComponentMusic.hpp  ComponentNoClippable.cpp  (+21 more)
src/ECS/Entities/: CMakeLists.txt  IEntity.cpp  IEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp
src/ECS/Systems/: CMakeLists.txt  ISystem.cpp  ISystem.hpp  SystemCollision.cpp  SystemCollision.hpp  SystemEvent.cpp  SystemEvent.hpp  SystemExemple.hpp  SystemExplosion.cpp  SystemExplosion.hpp  SystemIA.cpp  SystemIA.hpp  SystemRender.cpp  SystemRender.hpp  SystemRender2D.cpp  SystemRender2D.hpp  SystemRender3D.cpp  SystemRender3D.hpp
src/core/: CMakeLists.txt  connectPlayers.cpp  connectPlayers.hpp  core.cpp  core.hpp  gameMenu.cpp  gameMenu.hpp  gameSettings.cpp  gameSettings.hpp  initMap.cpp  initMap.hpp  mainMenu.cpp  mainMenu.hpp  pauseMenu.cpp  pauseMenu.hpp  settingsMenu.cpp  settingsMenu.hpp  winMenu.cpp  winMenu.hpp
src/core/information/: CMakeLists.txt  info.cpp  info.hpp
src/load/: CMakeLists.txt  load.cpp  load.hpp  loadComponent.cpp  loadComponent.hpp
src/map/: CMakeLists.txt  Map.cpp  Map.hpp
src/raylib/: CMakeLists.txt
src/raylib/include/: BoundingBox.hpp  Camera2D.hpp  Camera3D.hpp  Color.hpp  Font.hpp  Gamepad.hpp  Image.hpp  Mesh.hpp  Model.hpp  ModelAnimation.hpp  Mouse.hpp  Music.hpp  RaylibException.hpp  Rectangle.hpp  Sound.hpp  Texture.hpp  Vector2.hpp  Vector3.hpp  Window.hpp  raylib.hpp
src/raylib/src/: BoundingBox.cpp  CMakeLists.txt  Camera2D.cpp  Camera3D.cpp  Color.cpp  Font.cpp  Gamepad.cpp  Image.cpp  Mesh.cpp  Model.cpp  ModelAnimation.cpp  Mouse.cpp  Music.cpp  Rectangle.cpp  Sound.cpp  Texture.cpp  Vector2.cpp  Vector3.cpp  Window.cpp
src/save/: CMakeLists.txt  save.cpp  save.hpp
